fixing alignment on sponsor tables

--- a/_sass/wro/all.scss
+++ b/_sass/wro/all.scss
@@ -8447,6 +8447,7 @@ body {
   vertical-align: middle;
   text-align: center;
   padding: 20px;
+  height: 200px;
 }
 .conference-information .sponsors {
   margin-top: 80px;
